--- a/bebemos/.vscode/launch.json
+++ b/bebemos/.vscode/launch.json
@@ -7,7 +7,9 @@
         {
             "name": "bebemos",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/widgets/main.dart"
+            
         },
         {
             "name": "bebemos (profile mode)",
