--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  card_swiper: ^1.0.4
-  google_fonts: ^2.1.0
-  flip_card: ^0.5.0
+  cupertino_icons: ^1.0.5
+  card_swiper: ^2.0.4
+  google_fonts: ^3.0.1
+  flip_card: ^0.6.0
   lottie: ^1.3.0
-  liquid_swipe: ^2.1.1
+  liquid_swipe: ^3.0.0
   get: ^4.6.5
 
 
@@ -41,6 +41,14 @@ dev_dependencies:
   
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/Icono.png"
+  adaptive_icon_foreground: "assets/Icono.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
