--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_fortune_wheel: ^1.3.0
   get: ^4.6.5
   google_fonts: ^5.0.0
+  launch_review: ^3.0.1
   liquid_swipe: ^3.0.0
   lottie: ^2.4.0
   provider: ^6.0.5
